--- a/CurrencyExchangeProject/Jenkinsfile
+++ b/CurrencyExchangeProject/Jenkinsfile
@@ -3,7 +3,8 @@ node {
     withMaven(maven:'maven') {
 
         stage('Checkout') {
-            git url: 'https://github.com/ciimst/docker-compose-microservices.git', credentialsId: '13daaff0-994d-486d-8d1b-0f050daeeb26, branch: 'main'
+            git url: https://github.com/ayseayparcasiImst/microservices-junit.git', credentialsId: '3fd4127d-e3f3-423f-9490-e14fac1066d7, branch: 'main'
+
         }
 
         stage('Build') {
