--- a/CurrencyExchangeProject/Jenkinsfile
+++ b/CurrencyExchangeProject/Jenkinsfile
@@ -3,7 +3,7 @@ node {
     withMaven(maven:'maven') {
 
         stage('Checkout') {
-            git url: https://github.com/ayseayparcasiImst/microservices-junit.git', credentialsId: '3fd4127d-e3f3-423f-9490-e14fac1066d7, branch: 'main'
+            git url: 'https://github.com/ayseayparcasiImst/microservices-junit.git', credentialsId: '3fd4127d-e3f3-423f-9490-e14fac1066d7', branch: 'main'
 
         }
 
