--- a/CurrencyConversionProject/Jenkinsfile
+++ b/CurrencyConversionProject/Jenkinsfile
@@ -6,7 +6,7 @@ node {
             git url: 'https://github.com/ayseayparcasiImst/microservices-junit.git', credentialsId: '3fd4127d-e3f3-423f-9490-e14fac1066d7', branch: 'main'
         }
 
-        stage('Build') {
+        stage('Buildxxxxxxxxxxxxxxxxxx') {
             sh 'mvn clean install'
 
             def pom = readMavenPom file:'pom.xml'
